--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -18,3 +18,10 @@
     transform: translate(-50%,-50%);
     width: 60%;
 }
+.copy{
+	font-size: 0.8rem;
+}
+.search{
+	font-size: 0.75rem !important;
+}
+
