--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -118,14 +118,14 @@
 				<div class="topsearch">
 					<div class="container g-0">
 						<div class="row g-0 topsearch_tabs">
-							<div class="col-4 topsearch_tab d-flex align-items-center justify-content-center">
+							<div class="col-4 topsearch_tab first d-flex align-items-center justify-content-center">
 								<a class="search tab_active">キーワードから探す</a>
 							</div>
-							<div class="col-4 topsearch_tab js-modal-open-zoo d-flex align-items-center justify-content-center">
+							<div class="col-4 topsearch_tab second js-modal-open-zoo d-flex align-items-center justify-content-center">
 								<a class="search" data-bs-toggle="modal"
 									data-bs-target="#exampleModal">動物園から探す</a>
 							</div>
-							<div class="col-4 topsearch_tab js-modal-open-animal d-flex align-items-center justify-content-center">
+							<div class="col-4 topsearch_tab third js-modal-open-animal d-flex align-items-center justify-content-center">
 								<a class="search" data-bs-toggle="modal"
 									data-bs-target="#animalModal">動物から探す</a>
 							</div>
