--- a/src/main/resources/templates/block/header_boot.html
+++ b/src/main/resources/templates/block/header_boot.html
@@ -43,6 +43,7 @@
 
 				<hr class="divider my-2" />
 				<ul class="navbar-nav me-auto mb-2 mb-md-0">
+				<li class="nav-item"><a class="nav-link" aria-current="page" href="/">コアラマニア</a></li>
 					<li class="nav-item"><a class="nav-link" aria-current="page" href="/discription">コアラマニアとは？</a></li>
 					<li class="nav-item"><a class="nav-link" href="/search">コアラ情報を閲覧する</a></li>
 					<li class="nav-item"><a class="nav-link" href="/insert">新しい動物を登録する</a></li>
