changing view and set up changing for controller

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -1,126 +1,183 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-<meta charset="utf-8">
-<meta name="viewport"
-	content="width=device-width,initial-scale=1,maximum-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,maximum-scale=1">
 
-<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-<link rel="canonical"
-	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
-<!-- Bootstrap core CSS -->
-<link
-	href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
-	rel="stylesheet"
-	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-	crossorigin="anonymous">
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <link rel="canonical"
+          href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
+    <!-- Bootstrap core CSS -->
+    <link
+            href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
+            rel="stylesheet"
+            integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+            crossorigin="anonymous">
 
-<!-- Custom styles for this template -->
-<link href="/css/searchResult.css" rel="stylesheet">
-<title th:text="${title}">検索画面</title>
+    <!-- Custom styles for this template -->
+    <link href="/css/searchResult.css" rel="stylesheet">
+    <title th:text="${title}">検索画面</title>
+    <script type="text/javascript">
+
+    </script>
+
 </head>
 
 <body>
-	<div th:replace="~{block/header_boot::headerA_boot}"></div>
+<div th:replace="~{block/header_boot::headerA_boot}"></div>
 
-	<div class="searchResult-container">
+<div class="searchResult-container">
+    <br> <br> <br>
 
-		<br> <br> <br>
-		<form class="card-body row no-gutters align-items-center" method="get"
-			th:action="@{/search}" th:object="${animalSearchForm}">
+    <form class="card-body row no-gutters align-items-center" method="get"
+          th:action="@{/search}" th:object="${animalSearchForm}">
+        <div class="row">
 
-			<div>
-				<!--th:field="*{isMale}"を使用するとhiddenフィールドが出力されるため、th:checkedを使用-->
-				<input type="checkbox" id="isMale" name="isMale" th:checked="*{isMale}">
-				<label for="isMale">オス</label>
+            <div class="col-8">
+                <!--th:field="*{isMale}"を使用するとhiddenフィールドが出力されるため、th:checkedを使用-->
+                <input type="checkbox" id="isMale" name="isMale" th:field="*{isMale}">
+                <label for="isMale">オス</label>
+                <input type="checkbox" id="isFemale" name="isFemale" th:field="*{isFemale}">
+                <label for="isFemale">メス</label>
+                <input type="checkbox" id="isAlive" name="isAlive" th:field="*{isAlive}">
+                <label for="isAlive">生</label>
+                <input type="checkbox" id="isDead" name="isDead" th:field="*{isDead}">
+                <label for="isDead">死</label>
+            </div>
+                <div class="col-4 btn btn-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">動物園</div>
 
-				<input type="checkbox" id="Female" name="sex" value="FEMALE">
-				<label for="Female">メス</label>
-				<input type="checkbox" id="Alive" name="isAlive" value="alive">
-				<label for="Alive">生</label>
-				<input type="checkbox" id="Dead" name="isAlive" value="dead">
-				<label for="Dead">死</label>
+            <!-- Modal 動物園-->
+            <div class="modal fade" id="exampleModal" tabindex="-1"
+                 aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">動物園で絞り込み</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                        </div>
 
-				動物園 <select class="insertZoo" th:name="insertZoo">
-					<option th:each="zoo : ${zooList}" th:value="${zoo.zoo_id}" th:text="${zoo.zoo_name}"></option>
-				</select>
-			</div>
+                        <!--                        &lt;!&ndash;                        blockとは&ndash;&gt;-->
+                                                <div class="modal-body">
+                                                    <div th:each="zoo, status : ${zooList}">
+                                                        <input type="checkbox" th:value="${zoo.zoo_id}"
+                                                               th:id="${zoo.zoo_id}" th:name="zoo" th:checked="${#lists.contains(animalSearchForm.zoo, zoo.zoo_id)}">
+                                                        <label th:for="${zoo.zoo_id}" th:text="${zoo.zoo_name}"></label>
+                                                    </div>
+                                                </div>
 
-			<div class="col">
-				<input class="form-control form-control-lg form-control-borderless"
-					type="text" name="keyword" th:field="*{keyword}"
-					placeholder="キーワード">
-			</div>
-			<div class="col-auto">
-				<button class="btn btn-lg btn-success" type="submit">検索</button>
-			</div>
-		</form>
-		<div class="searchResult_content">
-			<div class="results">
-				<div class="koalaList">
-					<div class="koalaItem" th:each="animal : ${animalList}"
-						th:object="${animal}">
-						<div class="koalaItem_header">
-							<div class="koalaItemName">
-								<p th:if="*{sex == 0}">不明</p>
-								<img th:if="*{sex == 1}" th:src="@{../images/male.png}"> <img
-									th:if="*{sex == 2}" th:src="@{../images/female.png}">
-								<p th:text="*{name}"></p>
-							</div>
-							<div class="koalaItemInfo">
-								<p th:text="*{animalZooHistoryList[0].zoo.zoo_name}"
-									th:if="*{animalZooHistoryList[0].zoo.zoo_id} == 0"></p>
-								<p th:unless="*{animalZooHistoryList[0].zoo.zoo_id} == 0">
-									<a
-										th:href="@{/zoo/detail/{zoo_id}(zoo_id=*{animalZooHistoryList[0].zoo.zoo_id})}"
-										th:text="*{animalZooHistoryList[0].zoo.zoo_name}"> </a>
-								</p>
-							</div>
-						</div>
-						<div class="koalaItem_content">
-							<div class="koalaItem_image">
-								<a th:href="@{/detail/{animal_id}(animal_id=*{animal_id})}">
-									<img th:src="@{{Path}(Path = *{profileImagePath})}">
-								</a>
-							</div>
-							<div class="koalaItemData">
-								<div class="koalaItemDataList">
-									<ul>
-										<li><span class="koalaItemDataList_icon birth">生年月日</span>
-											<p th:unless="*{stringBirthDate.equals('9999年1月1日')}"
-												th:text="*{stringBirthDate}"></p></li>
-										<li><span class="koalaItemDataList_icon mother">母親</span>
-											<p th:if="*{#strings.isEmpty(motherAnimal.name)}">不明</p>
-											<p th:unless="*{#strings.isEmpty(motherAnimal.name)}">
-												<a
-													th:href="@{/detail/{animal_id}(animal_id=*{motherAnimal.animal_id})}"
-													th:text="*{motherAnimal.name}"> </a>
-											</p></li>
-										<li><span class="koalaItemDataList_icon father">父親</span>
-											<p th:if="*{#strings.isEmpty(fatherAnimal.name)}">不明</p>
-											<p th:unless="*{#strings.isEmpty(fatherAnimal.name)}">
-												<a
-													th:href="@{/detail/{animal_id}(animal_id=*{fatherAnimal.animal_id})}"
-													th:text="*{fatherAnimal.name}"> </a>
-											</p></li>
-									</ul>
-								</div>
 
-								<div class="links">
-									<a class="btn btn-sm btn-info"
-										th:href="@{/detail/{animal_id}(animal_id=*{animal_id})}">詳細情報</a>
-									<a class="btn btn-sm btn-primary"
-										th:href="@{/familytree(id=${animal.animal_id})}">家系図</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">決定</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+<div class="row">
+    <div class="col-8">
+        <input class="form-control form-control form-control-borderless"
+               type="text" name="keyword" th:field="*{keyword}"
+               placeholder="キーワード">
+    </div>
+        <button class="col-4 btn btn-success" type="submit">検索</button>
+</div>
+</form>
+
+<div class="searchResult_content">
+    <div class="results">
+        <div class="koalaList">
+            <div class="koalaItem" th:each="animal : ${animalList}"
+                 th:object="${animal}">
+                <div class="koalaItem_header">
+                    <div class="koalaItemName">
+                        <p th:if="*{sex == 0}">不明</p>
+                        <img th:if="*{sex == 1}" th:src="@{../images/male.png}"> <img
+                            th:if="*{sex == 2}" th:src="@{../images/female.png}">
+                        <p th:text="*{name}"></p>
+                    </div>
+                    <div class="koalaItemInfo">
+                        <p th:text="*{animalZooHistoryList[0].zoo.zoo_name}"
+                           th:if="*{animalZooHistoryList[0].zoo.zoo_id} == 0"></p>
+                        <p th:unless="*{animalZooHistoryList[0].zoo.zoo_id} == 0">
+                            <a
+                                    th:href="@{/zoo/detail/{zoo_id}(zoo_id=*{animalZooHistoryList[0].zoo.zoo_id})}"
+                                    th:text="*{animalZooHistoryList[0].zoo.zoo_name}"> </a>
+                        </p>
+                    </div>
+                </div>
+                <div class="koalaItem_content">
+                    <div class="koalaItem_image">
+                        <a th:href="@{/detail/{animal_id}(animal_id=*{animal_id})}">
+                            <img th:src="@{{Path}(Path = *{profileImagePath})}">
+                        </a>
+                    </div>
+                    <div class="koalaItemData">
+                        <div class="koalaItemDataList">
+                            <ul>
+                                <li><span class="koalaItemDataList_icon birth">生年月日</span>
+                                    <p th:unless="*{stringBirthDate.equals('9999年1月1日')}"
+                                       th:text="*{stringBirthDate}"></p></li>
+                                <li><span class="koalaItemDataList_icon mother">母親</span>
+                                    <p th:if="*{#strings.isEmpty(motherAnimal.name)}">不明</p>
+                                    <p th:unless="*{#strings.isEmpty(motherAnimal.name)}">
+                                        <a
+                                                th:href="@{/detail/{animal_id}(animal_id=*{motherAnimal.animal_id})}"
+                                                th:text="*{motherAnimal.name}"> </a>
+                                    </p></li>
+                                <li><span class="koalaItemDataList_icon father">父親</span>
+                                    <p th:if="*{#strings.isEmpty(fatherAnimal.name)}">不明</p>
+                                    <p th:unless="*{#strings.isEmpty(fatherAnimal.name)}">
+                                        <a
+                                                th:href="@{/detail/{animal_id}(animal_id=*{fatherAnimal.animal_id})}"
+                                                th:text="*{fatherAnimal.name}"> </a>
+                                    </p></li>
+                            </ul>
+                        </div>
+
+                        <div class="links">
+                            <a class="btn btn-sm btn-info"
+                               th:href="@{/detail/{animal_id}(animal_id=*{animal_id})}">詳細情報</a>
+                            <a class="btn btn-sm btn-primary"
+                               th:href="@{/familytree(id=${animal.animal_id})}">家系図</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+<script>
+		document.write('<script src="http://'
+				+ (location.host || 'localhost').split(':')[0]
+				+ ':35729/livereload.js?snipver=2"></' + 'script>')
+
+
+
+
+
+
+
+</script>
+
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
+<script
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+        crossorigin="anonymous"></script>
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+        crossorigin="anonymous"></script>
 </body>
 </html>
